2011-05-02  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* strace.cc (strace::vprntf): Avoid closing unopened handle.

2011-05-02  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* sysconf.cc (sca): Set _SC_SPIN_LOCKS to _POSIX_SPIN_LOCKS.

2011-05-02  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dll_init.cc (dll_list::alloc): Reset 'p' in forked process.

	* select.cc (select_stuff::wait): Move cleanup() closer to WFMO to
	minimize unavoidable (?) race.

2011-05-02  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_serial.cc (fhandler_serial::raw_read): Add restartability
	after a signal.  Add cancelability.
	(fhandler_serial::raw_write): Wait for write to succeed if O_NONBLOCK
	is not set.  Add signal handling and cancelability.

2011-05-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_windows.cc (fhandler_windows::read): Use
	pthread::get_cancel_event to fetch thread's cancel event.
	* flock.cc (lf_setlock): Ditto.
	* posix_ipc.cc (ipc_cond_timedwait): Ditto.
	* thread.cc (pthread::get_cancel_event): New static method.
	* thread.h (pthread::get_cancel_event): Declare.

2011-05-01  Corinna Vinschen  <corinna@vinschen.de>

	* libc/minires-os-if.c (get_dns_info): Remove unnecessary test for
	existence of DnsQuery_A.

2011-05-01  Corinna Vinschen  <corinna@vinschen.de>

	Throughout, use user32 UNICODE functions rather than ANSI functions.
	* autoload.cc: Convert all definitions for ANSI user32 functions to
	definitions for the corresponding UNICODE function.
	(SendMessageA): Remove.
	(SendNotifyMessageW): Define.
	* fhandler.h (fhandler_windows::is_slow): Remove.
	* fhandler_windows.cc (fhandler_windows::write): Use SendNotifyMessageW
	call rather than SendMessage to make function always return immediately.
	(fhandler_windows::read): Make function interruptible and a cancellation
	point.  Handle O_NONBLOCK.
	* select.cc (peek_serial): Don't wait for signal_arrived here.
	* window.cc (wininfo::winthread): Call CreateWindowExW directly rather