@@ -1,3 +1,8 @@
+2011-05-02  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_console.cc (fhandler_console::read): Make restartable and
+	cancelable.
+
 2011-05-02  Christopher Faylor  <me.cygwin2011@cgf.cx>
 
 	* strace.cc (strace::vprntf): Avoid closing unopened handle.
